<resources>
    <string name="app_name">Trivia Game</string>
    <string name="login_btn">login</string>
    <string name="playerName">playerName</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="menu">Menu</string>
    <string name="log_out_btn">Log out</string>
    <string name="start_game_btn">Start Game</string>
    <string name="table_score">Table Score</string>
    <string name="settings">Settings</string>
    <string name="new_user_sign_up">New User?Sign Up</string>
    <string name="quiz">Quiz</string>
    <string name="email">Email</string>
</resources>