<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".RegisterActivity">

    <!-- Login Title    -->
    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_btn"
        android:textSize="40sp">

    </TextView>


    <!-- Email Edit Text-->
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:id="@+id/email_input"
        android:layout_below="@id/login_txt"
        android:inputType="textEmailAddress">
    </EditText>

    <!-- Password Edit Text-->
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:layout_below="@id/email_input"
        android:id="@+id/password_input"
        android:inputType="textPassword">

    </EditText>

    <!-- Login Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:layout_below="@id/password_input"
        android:layout_alignEnd="@id/password_input"
        android:layout_centerHorizontal="true">
    </Button>

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_register"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/purple_700"
        android:text="@string/new_user_sign_up"
        tools:ignore="NotSibling" />

</RelativeLayout>