<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:src="@drawable/back">

        </ImageView>
    </RelativeLayout>

    <!-- Register Title    -->
    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="60sp">

    </TextView>


    <!-- Email Edit Text-->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_txt"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress">

    </EditText>

    <!-- Password Edit Text-->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword">

    </EditText>

    <!-- Register Button-->
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_input"
        android:layout_alignEnd="@id/password_input"
        android:layout_centerHorizontal="true"
        android:text="@string/register">

    </Button>

</RelativeLayout>